# LLM_OCR

./: .gitignore  README.md  openai_ocr copy.py  pyproject.toml
src/: openai_ocr.py
